--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^9.6.1",
     "postcss": "^7.0.17",
+    "postcss-browser-reporter": "^0.6.0",
     "postcss-less": "^3.1.4",
     "postcss-preset-env": "^6.7.0"
   }
